# hook-bridge

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  Makefile  README.md  hook-bridge.yaml
.codex/: hooks.json
.codex/hooks/: auto_review.py  review_prompt.md  review_schema.json  static_checks.json  static_checks.py
examples/: basic.yaml  claude-extended-events.yaml  platform-overrides.yaml  retry-and-env.yaml  stop-hooks.yaml
scripts/: check_file_lines.sh  dont_touch_cargo.sh
scripts/hooks/: auto_review.py  auto_review.sh  review_prompt.md
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs  normalize.rs  schema.rs  tests.rs
src/generate/: build.rs  managed.rs  mod.rs  tests.rs
src/generate/tests/: generation_core.rs  managed_files.rs
src/platform/: capability.rs  claude.rs  claude_tests.rs  codex.rs  mod.rs
src/run/: context.rs  mod.rs  retry.rs  tests.rs
src/run/tests/: command_output.rs  context_execute.rs  retry_state.rs
src/runtime/: clock.rs  fs.rs  io.rs  mod.rs  process.rs
tests/: cli.rs  cli_generate.rs  cli_meta.rs  cli_run.rs  runtime_fs.rs
tests/cli_generate/: basic.rs  events_and_errors.rs  platform_filter.rs
tests/cli_run/: basic.rs  platform_outputs.rs  retry_policy.rs  retry_state.rs  stop_and_feedback.rs
