[package]
name = "hook_bridge"
version = "0.1.0"
edition = "2024"
description = "A minimal bridge binary for hook-driven workflows."
license = "UNLICENSED"
readme = "README.md"
keywords = ["hooks", "bridge", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]

[lints.clippy]
cargo_common_metadata = "allow"
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# restriction
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"
allow_attributes_without_reason = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic_in_result_fn = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_assert_message = "deny"
indexing_slicing = "deny"
panic = "deny"
