[package]
name = "hook_bridge"
version = "0.1.0"
edition = "2024"
description = "A minimal bridge binary for hook-driven workflows."
license = "UNLICENSED"
readme = "README.md"
keywords = ["hooks", "bridge", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/FledgeXu/hook-bridge"

[dependencies]
atomic-write-file = "0.3.0"
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
fs-err = "3.3.0"
hex = "0.4.3"
process-wrap = "9.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
thiserror = "2.0.18"
wait-timeout = "0.2.1"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "deny"
cargo = "deny"
nursery = "deny"

# restriction
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"
allow_attributes_without_reason = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic_in_result_fn = "deny"
multiple_unsafe_ops_per_block = "deny"
missing_assert_message = "deny"
indexing_slicing = "deny"
panic = "deny"
too_many_lines = "deny"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
